# 6502

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: c-meson.yml
src/: cpu.c  cpu.h  main.c  meson.build
